tests/specs/ecosystem/jlarky/react_json_script/0_1_0.test
jlarky/react-json-script/0.1.0
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/index.tsx
error: TS2503 [ERROR]: Cannot find namespace 'JSX'.
export function JsonScript(props: JsonScriptProps): JSX.Element {
                                                    ~~~
    at file://<tmpdir>/index.tsx:5:53

